RESOLVED FIXED127973
Crashes after 163116 in [WKView takeViewSnapshot]
https://bugs.webkit.org/show_bug.cgi?id=127973
Summary Crashes after 163116 in [WKView takeViewSnapshot]
Tim Horton
Reported 2014-01-30 17:22:42 PST
We use ViewGestureController, but it could be null. We should make sure it's alive.
Attachments
patch (1.37 KB, patch)
2014-01-30 17:23 PST, Tim Horton
ap: review+
Tim Horton
Comment 1 2014-01-30 17:23:33 PST
Alexey Proskuryakov
Comment 2 2014-01-31 09:57:12 PST
Tim landed this fix in <http://trac.webkit.org/changeset/163147>.
Note You need to log in before you can comment on or make changes to this bug.