Crashes after 163116 in [WKView takeViewSnapshot] https://bugs.webkit.org/show_bug.cgi?id=127973

Reviewed by Alexey Proskuryakov.

* UIProcess/API/mac/WKView.mm:
(-[WKView _takeViewSnapshot]):
Make the ViewGestureController before using it, if we need one.


Canonical link: https://commits.webkit.org/145969@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163147 268f45cc-cd09-0410-ab3c-d52691b4dbfc